<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/recycler_task_item">

    <TextView
        android:id="@+id/rate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/piece_rate_button"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:text="@string/piece_rate"
        app:layout_constraintEnd_toStartOf="@+id/wages_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_label" />

    <Button
        android:id="@+id/wages_button"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:text="@string/wages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/piece_rate_button"
        app:layout_constraintTop_toBottomOf="@+id/rate_label" />

</androidx.constraintlayout.widget.ConstraintLayout>