<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rate_layout"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:background="@drawable/round_fill_gray_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/apply_all_btn"
        app:layout_constraintTop_toBottomOf="@+id/rate_label"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/per_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/per_hour"
            android:layout_marginEnd="@dimen/margin_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_tree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="3"
            android:layout_marginStart="@dimen/margin_tiny"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_l4"
            app:layout_constraintStart_toEndOf="@+id/money_sign"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/money_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            android:textSize="@dimen/text_size_l4"
            android:layout_marginStart="@dimen/margin_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/rate_label"
        android:text="@string/rate"
        app:layout_constraintStart_toStartOf="@+id/rate_layout"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/apply_all_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_to_all"
        app:layout_constraintBottom_toBottomOf="@+id/rate_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rate_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>